fix scrollar bug >>> padding white space

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,7 +40,7 @@
   flex:1;
   height: 100vh;
   overflow-y: scroll;
-  padding-left: 20px;
+  padding-left: 0px;
   box-sizing: content-box;
   width: 100%;
 }
@@ -81,5 +81,8 @@
   .desktop-contact-chat-box {
     display: flex;
     width: 100%;
+  }
+  .scrollable {
+    padding-left: 20px;
   }
 }
