--- a/src/app/contact-item/contact-item.component.css
+++ b/src/app/contact-item/contact-item.component.css
@@ -1,6 +1,7 @@
 li{
   display: flex;
   background-color: #f7f7f7;
+   padding: 10px;
 }
 .contact-item-image-and-online-state-container {
   flex: 1;
@@ -68,4 +69,10 @@ li{
   justify-content: center;
   width: 20px;
   height: 20px;
+}
+
+@media only screen and (min-width: 786px) {
+  li{
+    margin-left: -20px;
+  }
 }
